# urbanenergy-charge

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/adapters/: factory.py
backend/app/adapters/evoltsoft/: client.py  evoltsoft_adapter.py
backend/app/adapters/seed/: seed_adapter.py
backend/app/api/: deps.py  router.py  schemas.py
backend/app/api/routes/: analytics.py  health.py  locations.py  partners.py  sessions.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  models.py
backend/app/domain/: models.py  ports.py
backend/app/services/: analytics_service.py
backend/migrations/: env.py
backend/migrations/versions/: 17344347d302_initial_schema.py
backend/tests/: conftest.py  test_analytics.py  test_evoltsoft_adapter.py  test_health.py
csms/: README.md  central_system.py  db.py  requirements.txt  simulate_charger.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  useFetch.js
frontend/src/components/: Charts.jsx  KpiCard.jsx  TactIcon.jsx  TactLogo.css  TactLogo.jsx  Topbar.jsx  ui.jsx
frontend/src/pages/: Admin.jsx  Analytics.jsx  Billing.jsx  Locations.jsx  Partners.jsx  Sessions.jsx
frontend/src/styles/: app.css  recipes.css  tokens.css
reference/: URBANENERGY_REFERENCE.md
