[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "urbanenergy-backend"
version = "0.1.0"
description = "Urban Energy CSMS — management backend (production-grade foundation)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27",            # Phase 1 Evoltsoft adapter + test client
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

# ---- Ruff: lint + format ----
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade, simplify
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are designed to be called in defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

# ---- mypy: strict typing on our code ----
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
asyncio_mode = "auto"
